@@ -596,6 +596,8 @@ Release 0.23.6 - UNRELEASED
     MAPREDUCE-4802. Takes a long time to load the task list on the AM for
     large jobs (Ravi Prakash via bobby)
 
+    MAPREDUCE-4764. repair TestBinaryTokenFile (Ivan A. Veselovsky via bobby)
+
 Release 0.23.5 - UNRELEASED
 
   INCOMPATIBLE CHANGES
